Se agrego SweetAlert2 y se agrego un boton para mostrar informacion sobre el desarrollador

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
 	<link rel="stylesheet" type="text/css" href="app.css">
 	<!-- <link rel="stylesheet" type="text/css" href="index.css"> -->
+	<meta name="description" content="Series de TV y base de datos de series web. Crea horarios personalizados. Guía del episodio, elenco, equipo e información del personaje. Recaps, reseñas, trailers de episodios, fotos de celebridades y TV API.">
+	<meta name="author" content="José Padrón">
+	<link rel="shortcut icon" href="//static.tvmaze.com/images/favico/favicon.ico">
 </head>
 <body>
 
 	<div id="app-container">
 		<header id="app-header">
 			<h1><a href="/">TVify</a></h1>
+			<button class="about" id="about">Acerca de...</button>
 		</header>
+
 
 		<section id="app-body">
 
